--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       src="./assets/images/favicon.ico"
       height="100px"
       width="100px"
-      alt="Plate of turkish Kebab"
+      alt="Plate of nigerian eba"
     />
     <input type="file" />
   </body>
